# aiidalab-home

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  appmanager.ipynb  appstore.ipynb  code_setup.ipynb  control.ipynb  git_setup.ipynb  git_status.ipynb  manageapps.ipynb  metadata.json  open_app.ipynb  process.ipynb  process_list.ipynb  pyproject.toml  setup.cfg  single_app.ipynb  start.ipynb  start.md  start.py  terminal.ipynb  tools.py
.github/workflows/: ci.yml  release.yml
home/: __init__.py  app_manager.py  app_store.py  code_setup.py  computational_resources.py  control.py  node_preview.py  process.py  start_page.py  themes.py  utils.py  widgets.py
home/assets/css/: styles.css  styles.scss
miscellaneous/: styles.css
tests/: conftest.py  test_computational_resources.py  test_control.py  test_manage_app.py  test_process.py  test_start.py  test_terminal.py
tests_notebooks/: conftest.py  docker-compose.yml  test_manage_app.py  test_notification.py  test_process.py  test_start.py  test_terminal.py
