[metadata]
name = aiidalab_home
version = attr: home.__version__
description = Package for the AiiDAlab Home app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-home
author = The AiiDAlab Team
author_email = aiidalab@materialscloud.org
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/aiidalab/aiidalab-home/issues

[options]
packages = find:
install_requires =
    Jinja2
    Markdown
    aiidalab
    ipywidgets
    traitlets
python_requires = >=3.9

[options.extras_require]
dev =
    bumpver==2022.1118
    pre-commit==3.6.0

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v23.03.1"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
home/__init__.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
